--- a/style.css
+++ b/style.css
@@ -2,5 +2,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
   max-width: 1024px;
-  margin: 20px auto 0;
+  margin: 0 auto;
+  padding: 20px;
 }
