--- a/src/root.css
+++ b/src/root.css
@@ -1,7 +1,22 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-    'Helvetica Neue', sans-serif;
-  max-width: 1024px;
-  margin: 0 auto;
-  padding: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+p {
+  margin: 1em 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0.67em 0;
+}
+
+.page {
+  max-width: 1024px;
+  padding: 20px;
+  margin: 0 auto;
+  min-height: 100vh;
+}
+
