--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@
 }
 
 .item {
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px, rgba(0, 0, 0, 0.1) 0px 0px 2px 0px;
+  border: #e6e6e6;
 }
 
 .item__image-wrapper {
