--- a/public/projects/element-widget/src/Widget/Widget.module.css
+++ b/public/projects/element-widget/src/Widget/Widget.module.css
@@ -1,5 +1,46 @@
 .widget {
   font-family: "Roboto";
-  width: 740px;
-  border: 1px solid tomato;
+  width: 514px;
+  font-size: 14px;
+
+  padding: 20px;
+  border-radius: 6px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 25px;
+}
+
+.description {
+  margin-bottom: 15px;
+  color: #585858;
+}
+
+.selectedItemsContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.actionsContainer {
+  margin-bottom: 30px;
+}
+
+.selector {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  background-color: #373737;
+  color: white;
+  min-height: 500px;
+}
+
+.subheader {
+  font-weight: normal;
 }
