--- a/public/projects/element-widget/src/Widget/ui/ClosableElement.module.css
+++ b/public/projects/element-widget/src/Widget/ui/ClosableElement.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 7px;
+  padding: 7px 7px 7px 10px;
   line-height: 16px;
   color: white;
 }
