--- a/public/projects/element-widget/src/Widget/ui/CloseButton.module.css
+++ b/public/projects/element-widget/src/Widget/ui/CloseButton.module.css
@@ -5,6 +5,10 @@
   padding: 0;
   width: 18px;
   height: 18px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button:hover {
