--- a/public/projects/element-widget/src/Widget/Widget.module.css
+++ b/public/projects/element-widget/src/Widget/Widget.module.css
@@ -4,6 +4,7 @@
   font-size: 14px;
 
   padding: 20px;
+  margin: 20px;
   border-radius: 6px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
